tests still passing, added new ex-repositories-list component

--- a/app/index.scss
+++ b/app/index.scss
@@ -1,3 +1,4 @@
 @import "userInput/userInput";
 @import "resultsView/resultsView";
 @import "viewPanel/viewPanel";
+@import "repositoriesList/repositoriesList";
